force-app/main/default/objects/Customer_History__c/Customer_History__c.object-meta.xml
<CustomObject>
    <label>Customer History</label>
    <nameField>
        <displayFormat>CustHistoryId-{0000}</displayFormat>
        <label>Customer History Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customers_History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>