force-app/main/default/objects/Customer_History__c/fields/Cust_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Cust_First_Name__c</fullName>
    <label>Cust First Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>