force-app/main/default/objects/Customer_History__c/fields/Cust_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Cust_Last_Name__c</fullName>
    <label>Cust Last Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>