force-app/main/default/objects/Customer_History__c/fields/Cust_Total_Bal__c.field-meta.xml
<CustomField>
    <fullName>Cust_Total_Bal__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Cust Total Bal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>